--- a/php-version/static/style.css
+++ b/php-version/static/style.css
@@ -25,13 +25,6 @@ body.homepage {
 	body.homepage {
 		background-attachment: fixed;
 	}
-
-	.question-image,
-	.answer-image {
-		max-height: 500px;
-		width: auto !important;
-		object-fit: contain;
-	}
 }
 
 /* CLS Fix: Add padding to body when nav is fixed */
@@ -65,6 +58,15 @@ body::-webkit-scrollbar-thumb {
 
 body::-webkit-scrollbar-track {
 	background-color: #f5f5f5;
+}
+
+/* Global Responsive Image Styles */
+.question-image,
+.answer-image {
+	max-height: 500px;
+	width: auto !important;
+	object-fit: contain;
+	max-width: 100%;
 }
 
 .container {
