--- a/php-version/static/style.css
+++ b/php-version/static/style.css
@@ -4,10 +4,7 @@ html {
 
 /* Mobile First: Default styles */
 body.homepage {
-	background-image: url('img/2.jpg');
-	background-size: cover;
-	background-position: center;
-	background-attachment: scroll;
+	position: relative;
 	font-family: Arial, sans-serif;
 	margin: 0;
 	padding: 0;
@@ -20,11 +17,17 @@ body.homepage {
 	animation: fadeIn 1s ease-in-out;
 }
 
-/* Desktop: Fixed background for larger screens */
-@media (min-width: 769px) {
-	body.homepage {
-		background-attachment: fixed;
-	}
+body.homepage::before {
+	content: "";
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background-image: url('img/2.jpg');
+	background-size: cover;
+	background-position: center;
+	z-index: -1;
 }
 
 /* CLS Fix: Add padding to body when nav is fixed */
